--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,14 @@ services:
 if: branch = master
 script: 
 - make html 
+
+after_success: |
+  if [ -n "$GITHUB_TOKEN" ]; then
+    git config user.name "Travis CI"
+    git config user.email "Travis CI"
+    git checkout -q master
+    git add docs
+    git commit --allow-empty -m "Update Hosted Documentation [skip ci]"
+    git remote add authenticated https://steven-terrana:$GITHUB_TOKEN@github.com/boozallen/sdp-docs.git
+    git push --quiet authenticated master  >/dev/null 2>&1
+  fi
