--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -4,8 +4,8 @@ site:
   start_page: component-b::index.adoc 
 content:
   sources:
-  - url: .
-    branch: HEAD
+  - url: ./
+    branches: HEAD
   - url: https://gitlab.com/antora/demo/demo-component-a.git
     branches: master
   - url: https://gitlab.com/antora/demo/demo-component-b.git
