--- a/deployment-guides/antora.yml
+++ b/deployment-guides/antora.yml
@@ -1,6 +1,7 @@
 name: deployment-guides
 title: Deployment Guides
 version: 1.0
+start_page: ROOT:index.adoc
 nav:
 - modules/ROOT/nav.adoc
 - modules/openshift/nav.adoc
