--- a/learning-labs/antora.yml
+++ b/learning-labs/antora.yml
@@ -1,6 +1,7 @@
 name: learning-labs
 title: Learning Labs
 version: 1.0
+start_page: ROOT:index.adoc
 nav:
 - modules/ROOT/nav.adoc
 - modules/try-it-out/nav.adoc
