--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -1,17 +1,14 @@
 site:
   title: Solutions Delivery Platform
-  url: http://localhost
+  url: http://boozallen.github.io/sdp-docs-skin
   start_page: overview::index.adoc
 content:
   sources:
-  - url: .
-    branches: HEAD
+  - url: https://github.com/boozallen/sdp-docs.git
+    branches: antora-1
     start_path: overview
-  - url: .
-    start_path: deployment-guides
-    branches: HEAD
-  - url: .
-    branches: HEAD
+  - url: https://github.com/boozallen/sdp-docs.git
+    branches: antora-1
     start_path: learning-labs
 ui: 
   bundle: 
