--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "Steven Terrana",
   "devDependencies": {
     "@antora/cli": "^2.2.0",
+    "@antora/content-aggregator": "^2.2.0",
+    "@antora/site-generator-default": "^2.2.0",
+    "antora-lunr": "^0.5.0",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2"
   }
