--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "broken-link-checker": "^0.7.8",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
-    "gulp-cli": "^2.2.0"
+    "gulp-cli": "^2.2.0",
+    "minimist": ">=1.2.3"
   }
 }
