--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,13 @@ on:
   schedule: 
     - cron: '* * * * *'
 jobs:
-  Unit_Test:
+  publish:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Code
       uses: actions/checkout@v1
     - name: Build Docs 
       run: make docs 
+    - uses: mikeal/publish-to-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
