--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: master
   schedule: 
-    - cron: '* * * * *'
+    - cron: '0 20 * * *'
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -11,4 +11,7 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v1
     - name: Build Docs 
-      run: make docs && ls docs
+      run: make docs
+    - uses: mikeal/publish-to-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
