--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
       with: 
         persist-credentials: false
     - name: Log in to registry
-      uses: docker/login@master
+      uses: actions-hub/docker/login@master
       env:
         DOCKER_REGISTRY_URL: docker.pkg.github.com
         DOCKER_USERNAME: ${{ github.actor }}
