--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,14 +13,8 @@ jobs:
       uses: actions/checkout@v2
       with: 
         persist-credentials: false
-    - name: Log in to registry
-      uses: actions-hub/docker/login@master
-      env:
-        DOCKER_REGISTRY_URL: docker.pkg.github.com
-        DOCKER_USERNAME: ${{ github.actor }}
-        DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
     - name: Build Docs 
-      run: make docs
+      run: docker login -u {{github.actor}} -p {{github.token}} https://docker.pkg.github.com && make docs
     - uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
