--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -11,7 +11,7 @@ content:
     start_paths: [ overview, learning-labs ]
 
   - url: https://github.com/jenkinsci/templating-engine-plugin.git
-    branches: '1.7.1' 
+    branches: [ 'main', 'release/2.0-alpha' ]
     tags: [ '*', '!1.0*', '!1.1*', '!v1.2', '!1.v2*', '!1.3*', '!1.4*', '!1.5*' ]
     start_path: docs
 
